Do not write empty path to desktop file

BUG: 433304